--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -7,6 +7,9 @@
     <title>To Do List</title>
     <link rel="stylesheet" href="styles/main.css">
 </head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Courier+Prime&display=swap" rel="stylesheet">
 <body>
     <nav class="navbar">
         <a class="barcontent" id="today" href="/today">Today</a>
