--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -9,23 +9,27 @@ body {
 }
 
 .navbar {
-    background-color: orange;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background: linear-gradient(120deg, rgba(247,213,54,1) 100, rgba(252,149,44,1) 35%);
     height: 5vh;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 
 .barcontent {
-    margin-top: 3%;
-    margin-left: 3%;
+    margin-left: 2%;
     text-decoration: none;
     color: black;
     font-size: 2vh;
     background-color: rgb(255, 213, 97);
-    padding-top: 0.5rem;
+    padding-top: 0.2rem;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
-    padding-bottom: 0.5rem;
+    padding-bottom: 0.2rem;
     border-radius: 10%;
-    font-family: 'Courier Prime', monospace;
+    font-family: 'Fira Sans', sans-serif;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 
 }
 
@@ -39,6 +43,7 @@ body {
     margin: auto;
     margin-top: 50px;
     padding-bottom: 30px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 
 .list {
